src/test/contracts/top_level_patterns/negative/cameligo/inside_module.mligo
module A = struct
  let (x, x) = (1, "string")
end

let y = A.x ^ "1"
